// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Card it should match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: white;
  border-radius: 3px;
  padding: 0.5rem;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  -webkit-transition: background 200ms linear;
  transition: background 200ms linear;
}

<div
  className="c0"
/>
`;

exports[`Components: Card it should match the snapshot when active 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: white;
  border-radius: 3px;
  padding: 0.5rem;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  -webkit-transition: background 200ms linear;
  transition: background 200ms linear;
  background: #e5f4f7;
}

<div
  className="c0"
/>
`;
